tests/exec/pos/string_assign.hsc
fn main() {
  let s = "hi";
  s = s + "!";
  write(s);
}
