tests/exec/neg/error_path.hsc
fn main() {
  write("bad");
  exit(1);
}
